--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,4 +1,12 @@
 {
-	"dependencies": {
-	}
+  "dependencies": {
+    "com.unity.probuilder": "3.0.3",
+    "com.unity.postprocessing": "2.0.3-preview",
+    "com.unity.ads": "exclude",
+    "com.unity.analytics": "exclude",
+    "com.unity.purchasing": "exclude",
+    "com.unity.shadergraph": "1.1.2-preview",
+    "com.unity.standardevents": "exclude",
+    "com.unity.cinemachine": "2.1.12"
+  }
 }
