added TMP, trying to rework spaceship uv's

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,7 +8,8 @@
     "com.unity.shadergraph": "1.1.3-preview",
     "com.unity.standardevents": "exclude",
     "com.unity.cinemachine": "2.1.12",
-    "com.unity.render-pipelines.lightweight": "1.1.4-preview"
+    "com.unity.render-pipelines.lightweight": "1.1.4-preview",
+    "com.unity.textmeshpro": "1.2.2"
   },
   "registry": "http://staging-packages.unity.com"
 }
